--- a/app.json
+++ b/app.json
@@ -5,9 +5,9 @@
   "keywords": [
     "Youtube","YoutubeDownloader"
   ],
-  "repository": "https://github.com/OO7ROBOT/YoutubeDownloaderBot",
-  "success_url": "https://t.me/tg_utubebot",
-  "website": "https://github.com/OO7ROBot/YoutubeDownloaderBot",
+  "repository": "https://github.com/Dxykvg/yttest",
+  "success_url": "https://t.me/",
+  "website": "https://github.com/Dxykvg/yttest",
   "env": {
         "API_ID": {"description": "Get this value from https://my.telegram.org", "required": true},
         "API_HASH": {"description": "Get this value from https://my.telegram.org" , "required": true},
